syntax = "proto3";

option csharp_namespace = "NuevorServidor";

package user;

// The admin service definition.
service User {

  // Functions availables
   rpc EditUser(UserDTO) returns (MessageReply);
   rpc PostUser(UserDTO) returns (MessageReply);
   rpc DeleteUser(Id) returns (MessageReply);
 
}

message UserDTO{
	string email = 1;
	string name = 2;
  string password = 3;
}

message Id {
	string email = 1;
}


message MessageReply {
	string message = 1;
}
